[package]
name = "spur"
version = "0.1.0"
edition = "2021"
description = "Rust types for the Spur Context API"
license = "MIT"
repository = "https://github.com/example/spur-rs"
keywords = ["spur", "ip", "context", "api", "security"]
categories = ["api-bindings", "data-structures"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"

[features]
default = []
