[package]
name = "spur"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
description = "Rust types for the Spur Context API - IP intelligence, VPN/proxy detection, and risk assessment"
license = "MIT"
repository = "https://github.com/example/spur-rs"
documentation = "https://docs.rs/spur"
readme = "README.md"
keywords = ["spur", "ip", "context", "api", "security"]
categories = ["api-bindings", "data-structures", "network-programming"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = { version = "1.5", optional = true }

[dev-dependencies]
serde_json = "1"
proptest = "1.5"
spur = { path = ".", features = ["test-utils"] }

[features]
default = []
# Enable test utilities for downstream crates (builders, fixtures, proptest strategies)
test-utils = ["proptest"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
